# crypto-news-rag-system

./: .gitignore  README.md  app.py  chainlit.toml  llm_client.py  pyproject.toml  rag_experiment.ipynb
api/: app.py
collector/: __init__.py  client.py  config.py  historical.py  live.py  models.py  mongo_collector.py  repository.py  runner.py
eval/: dataset.py  evaluate.py  run_eval.py
src/ingestion/: chunker.py  embedder.py  pipeline.py  vector_store.py
src/retrieval/: retriever.py
